HELEK 1 passed with all test